# mirage

./: .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
man/: mirage.1
shell_completions/: README.md
shell_completions/bash/: mirage
shell_completions/fish/: mirage.fish
shell_completions/zsh/: _mirage
src/: cache.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  performance.rs
systemd/: mirage.conf  mirage.service  mirage.timer  mirage.tmpfiles
tests/: cache_tests.rs  cli_tests.rs  config_tests.rs  error_tests.rs  lib_tests.rs  main_tests.rs  performance_tests.rs
